fix(#525): Bug : LNodeTypeAdapter.getDataAttributeRef should not throw exception Multiple Data Attribute found
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>